# unmanned-research

./: README.md  README.md~  startup_script.sh  startup_script.sh~
virtual_infrastructure_pkg/: CMakeLists.txt  package.xml  setup.py
virtual_infrastructure_pkg/include/: Object.h
virtual_infrastructure_pkg/launch/: astar1.launch  astar2.launch  camera.launch  camera1.launch  camera2.launch  ground_station.launch  ground_station1.launch  ground_station2.launch  ground_station2_local.launch  info.launch  rgb1_node.launch  rgb1_node.launch~  rgb2_node.launch  rgb2_node.launch~  rgb_node.launch  rgb_node.launch~  vizualizer.launch  yaml_info_pub.py
virtual_infrastructure_pkg/src/: Astar.cpp  DataProcessor.cpp  Object.cpp  Odom.cpp  Planner.cpp  PtCloudProcessor.cpp  ground_station_rgb.cpp  ground_station_therm.cpp
